# checkfox_api_skillcheck

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  start.sh
app/: customer_mapping.py  http_client.py  logging_conf.py  main.py  schemas.py  services.py  settings.py
app/resources/: customer_attribute_mapping.json
tests/: test_customer_payload.py  test_extract_normalized_lead.py  test_rules.py
